--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-net --allow-env --unstable-kv server.ts",
+    "dev": "deno run --watch --allow-net --allow-env --allow-read --unstable-kv server.ts",
     "poll": "deno run --allow-net --allow-env --allow-ffi --allow-read poller.ts",
-    "deploy": "deployctl deploy --project=tauon-now-playing server.ts",
+    "deploy": "deployctl deploy --project=tauon-now-playing --allow-read server.ts",
     "check": "deno check server.ts poller.ts svg.ts types.ts",
     "fmt": "deno fmt"
   },
